--- a/audit_bonnes_pratiques.html
+++ b/audit_bonnes_pratiques.html
@@ -81,12 +81,12 @@
               <li><a href="mystery_shoping.html">Mystery Shoping</a></li>
 
 
-              <li class="dropdown"><a href="L’excellence de l’expérience client.html"><span>Customer Experience Excellence</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown"><a href="L'excellence de l'expérience client.html"><span>Customer Experience Excellence</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="Normes internationales en matière d’expérience client .html">International Customer Experience Standard</a></li>
-                  <li><a href="Normes internationales en matière d’expérience client sur les plateformes digitales .html">International Digital Customer Experience Standard (IDCXS2022)
+                  <li><a href="Normes internationales en matière d'expérience client .html">Norme internationale d'expérience client</a></li>
+                  <li><a href="Normes internationales en matière d'expérience client sur les plateformes digitales .html">Norme internationale d'expérience client NUMÉRIQUE (IDCXS2022)
                   </a></li>
-                  <li><a href="Normes internationales de bonheur et de bien-être des salariés .html">International Employee Happiness and Wellbeing Standard (IEHWS2023)</a></li>
+                  <li><a href="Normes internationales de bonheur et de bien-être des salariés .html">Norme de bonheur et de bien-être des employés 2023 (IEHWS2023)</a></li>
                  
                 </ul>
               </li>
@@ -159,7 +159,19 @@
           <div class="arrow" onclick="location.href='index.html#services';"></div>
           <h2>Audit des bonnes pratiques de stockage et de distribution des produits</h2>
 <p>
-    Le stockage et la distribution sont des activités importantes de la gestion de la chaîne d’approvisionnement. De nombreux intervenants différents peuvent être amenées à s’occuper de la manipulation, du stockage et de la distribution des produits. Les produits peuvent être exposés à toutes sortes de risques à chaque stade de la chaîne d’approvisionnement, par exemple, l’achat, le stockage, le reconditionnement, le ré étiquetage, le transport et la distribution. 
+  Dans un environnement commercial de plus en plus complexe, la gestion efficace du stockage et de la distribution des produits est essentielle pour assurer la pérennité et la compétitivité des entreprises. <strong> BICOD Sarl </strong>vous accompagne dans cette démarche cruciale en vous offrant des services d'audit rigoureux. Nous croyons fermement que la prévention des risques liés à la chaîne d'approvisionnement est non seulement une nécessité, mais également un levier stratégique pour optimiser vos opérations. En collaborant avec nous, vous bénéficierez d'une expertise pointue qui vous permettra de sécuriser vos processus tout en maximisant l'efficacité de votre chaîne logistique. <br>
+Notre audit des bonnes pratiques de stockage et de distribution vise à réduire au minimum les risques auxquels vos produits peuvent être exposés à chaque étape de la chaîne d'approvisionnement, notamment lors de l'achat, du stockage, du reconditionnement, du réétiquetage, du transport et de la distribution. Nos experts s'engagent à examiner minutieusement les aspects suivants : <br>
+<ul style="margin-left: 25px; margin-top: 5px; color: red;">
+  <li>Conformité aux procédures de stockage </li>	
+  <li>Suivi des dates de péremption</li>	 
+  <li>	Contrôle des conditions de stockage</li> 
+  <li>Gestion des stocks </li>	
+  <li>Contrôle des flux de distribution</li>	 
+
+</ul>
+</p>
+<p>En procédant à cet audit exhaustif, votre entreprise sera en mesure d'identifier les points faibles de sa chaîne de distribution. Cela permettra non seulement de mettre en œuvre des actions correctives appropriées, mais également d'anticiper tout dysfonctionnement susceptible de perturber vos opérations. Travailler avec <strong>BICOD Sarl</strong> , c'est choisir un partenaire engagé à optimiser votre chaîne d'approvisionnement et à renforcer la confiance de vos clients.
+
 </p>
           <!-- <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
@@ -172,7 +184,7 @@
 
             <h4>Book a call with us</h4>
            <!-- Google Calendar Appointment Scheduling begin -->
-<iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ0JFAKKREpg1CWFUlMzgBEKF_Lh8x-DJcZI83e8-LavZqkrOaQ41k_chx6FRlQ4ihz0wccG-pcs?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
+<iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2LGughSAKyTuycvetl1kqlSTZ87TgIorFLtMsN8XEhIQ--tCQ4CqF1r9l1oJMkg-2fEG21lb0f?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
 <!-- end Google Calendar Appointment Scheduling -->
           </div>
 
@@ -202,26 +214,26 @@
             <p><strong>Email:</strong> <span>admin@bicod.org</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="https://x.com/Bicod_Sarl"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.facebook.com/share/15jJWtQ6X7/"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/bicod_sarl/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/bureau-international-de-cooperation-au-developpement/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Liens utiles</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="index.html">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#about">About us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#about">A propos</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#services">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contact us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contactez nous</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#team">Personnel</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Nos Services</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="santé.html">Ingénierie de la Santé</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="developpement_durable.html">Developpement durable</a></li>
@@ -257,7 +269,6 @@
     </div>
 
   </footer>
-
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
