--- a/audit_laboratoires.html
+++ b/audit_laboratoires.html
@@ -81,12 +81,12 @@
               <li><a href="mystery_shoping.html">Mystery Shoping</a></li>
 
 
-              <li class="dropdown"><a href="L’excellence de l’expérience client.html"><span>Customer Experience Excellence</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown"><a href="L'excellence de l'expérience client.html"><span>Customer Experience Excellence</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="Normes internationales en matière d’expérience client .html">International Customer Experience Standard</a></li>
-                  <li><a href="Normes internationales en matière d’expérience client sur les plateformes digitales .html">International Digital Customer Experience Standard (IDCXS2022)
+                  <li><a href="Normes internationales en matière d'expérience client .html">Norme internationale d'expérience client</a></li>
+                  <li><a href="Normes internationales en matière d'expérience client sur les plateformes digitales .html">Norme internationale d'expérience client NUMÉRIQUE (IDCXS2022)
                   </a></li>
-                  <li><a href="Normes internationales de bonheur et de bien-être des salariés .html">International Employee Happiness and Wellbeing Standard (IEHWS2023)</a></li>
+                  <li><a href="Normes internationales de bonheur et de bien-être des salariés .html">Norme de bonheur et de bien-être des employés 2023 (IEHWS2023)</a></li>
                  
                 </ul>
               </li>
@@ -160,8 +160,10 @@
 
           <h2>Audit des laboratoires</h2>
           <p>
-            Il est question ici d’évaluer la conformité du laboratoire (les installations, le personnel, les équipements, les procédures, les données et les résultats des tests effectués) aux normes, règlementations et bonne pratiques en vigueur. Il permet de détecter les failles, les lacunes, les manquements dans son fonctionnement. 
-          </p>
+            Dans un contexte où la qualité et la conformité sont primordiales, notre cabinet <strong>BICOD Sarl</strong> , propose un audit exhaustif des laboratoires. Ce service a pour objectif d’évaluer la conformité des installations, du personnel, des équipements, des procédures, ainsi que des données et résultats des tests effectués, aux normes et réglementations en vigueur. <br>
+            À travers cet audit, nous identifions les failles, lacunes et manquements dans le fonctionnement de votre laboratoire. Notre approche méthodique permet de déceler les problèmes ou non-conformités existants et de vous fournir des recommandations précises et des mesures correctives adaptées. Ainsi, nous garantissons la qualité et l'intégrité de vos résultats, tout en renforçant la confiance de vos clients et partenaires. <br>
+            En choisissant BICOD Sarl pour réaliser cet audit, vous optez pour une démarche proactive qui assure la pérennité et l'excellence de vos opérations au sein du laboratoire. <br>
+                      </p>
           <!-- <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
               <a href="#" class="active">Web Design</a>
@@ -173,7 +175,7 @@
 
             <h4>Book a call with us</h4>
            <!-- Google Calendar Appointment Scheduling begin -->
-<iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ0JFAKKREpg1CWFUlMzgBEKF_Lh8x-DJcZI83e8-LavZqkrOaQ41k_chx6FRlQ4ihz0wccG-pcs?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
+<iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2LGughSAKyTuycvetl1kqlSTZ87TgIorFLtMsN8XEhIQ--tCQ4CqF1r9l1oJMkg-2fEG21lb0f?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
 <!-- end Google Calendar Appointment Scheduling -->
           </div>
 
@@ -203,26 +205,26 @@
             <p><strong>Email:</strong> <span>admin@bicod.org</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="https://x.com/Bicod_Sarl"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.facebook.com/share/15jJWtQ6X7/"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/bicod_sarl/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/bureau-international-de-cooperation-au-developpement/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Liens utiles</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="index.html">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#about">About us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#about">A propos</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#services">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contact us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contactez nous</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#team">Personnel</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Nos Services</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="santé.html">Ingénierie de la Santé</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="developpement_durable.html">Developpement durable</a></li>
