--- a/audit_marque.html
+++ b/audit_marque.html
@@ -81,12 +81,12 @@
               <li><a href="mystery_shoping.html">Mystery Shoping</a></li>
 
 
-              <li class="dropdown"><a href="L’excellence de l’expérience client.html"><span>Customer Experience Excellence</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown"><a href="L'excellence de l'expérience client.html"><span>Customer Experience Excellence</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="Normes internationales en matière d’expérience client .html">International Customer Experience Standard</a></li>
-                  <li><a href="Normes internationales en matière d’expérience client sur les plateformes digitales .html">International Digital Customer Experience Standard (IDCXS2022)
+                  <li><a href="Normes internationales en matière d'expérience client .html">Norme internationale d'expérience client</a></li>
+                  <li><a href="Normes internationales en matière d'expérience client sur les plateformes digitales .html">Norme internationale d'expérience client NUMÉRIQUE (IDCXS2022)
                   </a></li>
-                  <li><a href="Normes internationales de bonheur et de bien-être des salariés .html">International Employee Happiness and Wellbeing Standard (IEHWS2023)</a></li>
+                  <li><a href="Normes internationales de bonheur et de bien-être des salariés .html">Norme de bonheur et de bien-être des employés 2023 (IEHWS2023)</a></li>
                  
                 </ul>
               </li>
@@ -160,8 +160,32 @@
 
           <h2>Audit de marque</h2>
           <p>
-            L’audit de marque permet d’évaluer de manière approfondi la perception, la position et la performance d’une marque sur le marché. En d’autres termes, Il vise à analyser divers aspects de la marque tel que son identité visuelle, sa communication, sa présence en ligne et l’expérience client. Le contexte commercial actuel étant très concurrentiel, toute entreprise qui veut être pérenne se doit de faire un audit de marque. 
-          </p>
+            Chez BICOD Sarl, nous nous engageons à accompagner les entreprises dans l'évaluation approfondie de leur marque afin d'optimiser leur positionnement sur le marché. L’audit de marque que nous proposons est un processus rigoureux et méthodique qui permet d'analyser la perception, la performance et l'identité d'une marque dans un environnement commercial de plus en plus concurrentiel. Dans ce contexte, il est impératif pour toute entreprise désireuse de pérenniser son activité de procéder à un audit de marque. <br>
+            Notre approche comprend les étapes suivantes : <br>
+            <ul style="margin-left: 25px; margin-top: 5px; color: red;">
+              <li>Analyse de l’identité de la marque</li>  
+              <li> Évaluation du positionnement sur le marché </li>
+               <li>Étude de la perception des consommateurs</li> 
+             <li> Analyse de la performance marketing </li>
+              <li>Évaluation de l’expérience client</li> 
+              <li>Vérification de la consistance de la communication</li>
+            </ul></p>
+             
+           <p> Pourquoi est-il essentiel de réaliser un audit de marque ? </p>
+            <ul style="margin-left: 25px; margin-top: 5px; color: red;">
+
+              <li>Connaître les forces et faiblesses de votre marque.</li>	
+              <li>Disposer d’informations actualisées pour anticiper l’évolution du marché.</li>	
+              <li>	Ajuster ou modifier vos campagnes en temps opportun.</li>
+              <li>Mieux connaître votre cible.</li>	
+              <li>	Saisir de nouvelles opportunités.</li>
+              <li>Comprendre votre marché et vos concurrents.</li>	
+              <li>Renforcer et dynamiser votre image de marque.</li>	
+              <li>Optimiser vos stratégies marketing.</li>	
+            </ul>
+           <p>
+            En collaborant avec BICOD Sarl, vous vous assurez d'une analyse exhaustive et stratégique qui propulsera votre marque vers de nouveaux sommets.
+                                              </p>
           <!-- <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
               <a href="#" class="active">Web Design</a>
@@ -173,7 +197,7 @@
 
             <h4>Book a call with us</h4>
            <!-- Google Calendar Appointment Scheduling begin -->
-<iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ0JFAKKREpg1CWFUlMzgBEKF_Lh8x-DJcZI83e8-LavZqkrOaQ41k_chx6FRlQ4ihz0wccG-pcs?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
+<iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2LGughSAKyTuycvetl1kqlSTZ87TgIorFLtMsN8XEhIQ--tCQ4CqF1r9l1oJMkg-2fEG21lb0f?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
 <!-- end Google Calendar Appointment Scheduling -->
           </div>
 
@@ -203,26 +227,26 @@
             <p><strong>Email:</strong> <span>admin@bicod.org</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="https://x.com/Bicod_Sarl"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.facebook.com/share/15jJWtQ6X7/"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/bicod_sarl/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/bureau-international-de-cooperation-au-developpement/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Liens utiles</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="index.html">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#about">About us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#about">A propos</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#services">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contact us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contactez nous</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#team">Personnel</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Nos Services</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="santé.html">Ingénierie de la Santé</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="developpement_durable.html">Developpement durable</a></li>
