--- a/developpement_durable.html
+++ b/developpement_durable.html
@@ -103,10 +103,10 @@
 
               <li class="dropdown"><a href="L’excellence de l’expérience client.html"><span>Customer Experience Excellence</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="Normes internationales en matière d’expérience client .html">International Customer Experience Standard</a></li>
-                  <li><a href="Normes internationales en matière d’expérience client sur les plateformes digitales .html">International Digital Customer Experience Standard (IDCXS2022)
+                  <li><a href="Normes internationales en matière d’expérience client .html">Norme internationale d'expérience client</a></li>
+                  <li><a href="Normes internationales en matière d’expérience client sur les plateformes digitales .html">Norme internationale d'expérience client NUMÉRIQUE (IDCXS2022)
                   </a></li>
-                  <li><a href="Normes internationales de bonheur et de bien-être des salariés .html">International Employee Happiness and Wellbeing Standard (IEHWS2023)</a></li>
+                  <li><a href="Normes internationales de bonheur et de bien-être des salariés .html">Norme de bonheur et de bien-être des employés 2023 (IEHWS2023)</a></li>
                  
                 </ul>
               </li>
