--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -82,10 +82,10 @@
 
               <li class="dropdown"><a href="developpement_durable.html"><span>Customer Experience Excellence</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="calender.html">International Customer Experience Standard</a></li>
-                  <li><a href="calender.html">International Digital Customer Experience Standard (IDCXS2022)
+                  <li><a href="calender.html">Norme internationale d'expérience client</a></li>
+                  <li><a href="calender.html">Norme internationale d'expérience client NUMÉRIQUE (IDCXS2022)
                   </a></li>
-                  <li><a href="calender.html">International Employee Happiness and Wellbeing Standard (IEHWS2023)</a></li>
+                  <li><a href="calender.html">Norme de bonheur et de bien-être des employés 2023 (IEHWS2023)</a></li>
                  
                 </ul>
               </li>
