--- a/mystery_shoping.html
+++ b/mystery_shoping.html
@@ -148,7 +148,22 @@
 
 
 
+        .arrow {
+    width: 20px;
+    height: 20px;
+    border: solid #ccc;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 10px;
+    transform: rotate(135deg);
+    transition: border-color 0.3s, transform 0.3s;
+    cursor: pointer;
+}
 
+.arrow:hover {
+    border-color: #007BFF;
+    transform: rotate(135deg) scale(1.1);
+}
 
 
    </style>
@@ -198,12 +213,12 @@
               <li><a href="mystery_shoping.html">Mystery Shoping</a></li>
 
 
-              <li class="dropdown"><a href="L’excellence de l’expérience client.html"><span>Customer Experience Excellence</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown"><a href="L'excellence de l'expérience client.html"><span>Customer Experience Excellence</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="Normes internationales en matière d’expérience client .html">International Customer Experience Standard</a></li>
-                  <li><a href="Normes internationales en matière d’expérience client sur les plateformes digitales .html">International Digital Customer Experience Standard (IDCXS2022)
+                  <li><a href="Normes internationales en matière d'expérience client .html">Norme internationale d'expérience client</a></li>
+                  <li><a href="Normes internationales en matière d'expérience client sur les plateformes digitales .html">Norme internationale d'expérience client NUMÉRIQUE (IDCXS2022)
                   </a></li>
-                  <li><a href="Normes internationales de bonheur et de bien-être des salariés .html">International Employee Happiness and Wellbeing Standard (IEHWS2023)</a></li>
+                  <li><a href="Normes internationales de bonheur et de bien-être des salariés .html">Norme de bonheur et de bien-être des employés 2023 (IEHWS2023)</a></li>
                  
                 </ul>
               </li>
@@ -285,14 +300,14 @@ Le programme Mystery shopping ou d'Évaluation Client Mystère que nous appliquo
   <li>Le Mystery shopping de recommandation des produits/services ;</li>
   <li>Le Mystery shopping de conversion des ventes ;</li>
   <li>The Voice of costumer (VoC) ;</li>
-</ul>
+</ul> </p>
 
 <h5>Qu'est-ce que le Mystery Shopping ?</h5>
-Le Mystery Shopping ou évaluation client mystère, est une méthode d'analyse qui consiste à engager des évaluateurs formés, appelés « clients mystères », pour se rendre dans vos établissements en tant que clients ordinaires. Préparés avec des scénarios réalistes, ces agents ont pour mission d'évaluer la qualité du service proposé selon un ensemble de critères prédéfinis, élaborés en collaboration avec votre équipe managériale.
+<p>Le Mystery Shopping ou évaluation client mystère, est une méthode d'analyse qui consiste à engager des évaluateurs formés, appelés « clients mystères », pour se rendre dans vos établissements en tant que clients ordinaires. Préparés avec des scénarios réalistes, ces agents ont pour mission d'évaluer la qualité du service proposé selon un ensemble de critères prédéfinis, élaborés en collaboration avec votre équipe managériale. </p>
 <h5>Pourquoi mettre en place cette démarche ?</h5>
-Cette approche vous permet d'obtenir une vision objective et exhaustive de la qualité du service fourni, en se basant sur des normes établies. Elle vous aide à identifier les points forts et les axes d'amélioration de votre prestation.
+<p>Cette approche vous permet d'obtenir une vision objective et exhaustive de la qualité du service fourni, en se basant sur des normes établies. Elle vous aide à identifier les points forts et les axes d'amélioration de votre prestation.</p>
 <h5>Comment cela fonctionne-t-il ?</h5>
-Nos évaluateurs, formés spécifiquement pour cette tâche, agissent comme des observateurs discrets au sein de votre entreprise. Grâce à notre réseau d'enquêteurs, nous vous assistons dans l'optimisation de votre service client, en veillant à ce qu'il soit conforme aux standards définis pour chaque point de contact avec la clientèle. Cette méthode vous permet de garantir une expérience client exceptionnelle et cohérente à chaque interaction.
+<p>Nos évaluateurs, formés spécifiquement pour cette tâche, agissent comme des observateurs discrets au sein de votre entreprise. Grâce à notre réseau d'enquêteurs, nous vous assistons dans l'optimisation de votre service client, en veillant à ce qu'il soit conforme aux standards définis pour chaque point de contact avec la clientèle. Cette méthode vous permet de garantir une expérience client exceptionnelle et cohérente à chaque interaction.
 
           </p>
 
@@ -341,7 +356,7 @@ Nos évaluateurs, formés spécifiquement pour cette tâche, agissent comme des 
 
 <h4>Book a call with us</h4>
 <!-- Google Calendar Appointment Scheduling begin -->
-<iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ0JFAKKREpg1CWFUlMzgBEKF_Lh8x-DJcZI83e8-LavZqkrOaQ41k_chx6FRlQ4ihz0wccG-pcs?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
+<iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2LGughSAKyTuycvetl1kqlSTZ87TgIorFLtMsN8XEhIQ--tCQ4CqF1r9l1oJMkg-2fEG21lb0f?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
 <!-- end Google Calendar Appointment Scheduling -->
 
 
@@ -426,26 +441,26 @@ Nos évaluateurs, formés spécifiquement pour cette tâche, agissent comme des 
             <p><strong>Email:</strong> <span>admin@bicod.org</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="https://x.com/Bicod_Sarl"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.facebook.com/share/15jJWtQ6X7/"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/bicod_sarl/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/bureau-international-de-cooperation-au-developpement/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Liens utiles</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="index.html">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#about">About us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#about">A propos</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#services">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contact us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contactez nous</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#team">Personnel</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Nos Services</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="santé.html">Ingénierie de la Santé</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="developpement_durable.html">Developpement durable</a></li>
@@ -481,7 +496,6 @@ Nos évaluateurs, formés spécifiquement pour cette tâche, agissent comme des 
     </div>
 
   </footer>
-
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
