--- a/securites_informatiques.html
+++ b/securites_informatiques.html
@@ -102,10 +102,10 @@
 
               <li class="dropdown"><a href="developpement_durable.html"><span>Customer Experience Excellence</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="calender.html">International Customer Experience Standard</a></li>
-                  <li><a href="calender.html">International Digital Customer Experience Standard (IDCXS2022)
+                  <li><a href="calender.html">Norme internationale d'expérience client</a></li>
+                  <li><a href="calender.html">Norme internationale d'expérience client NUMÉRIQUE (IDCXS2022)
                   </a></li>
-                  <li><a href="calender.html">International Employee Happiness and Wellbeing Standard (IEHWS2023)</a></li>
+                  <li><a href="calender.html">Norme de bonheur et de bien-être des employés 2023 (IEHWS2023)</a></li>
                  
                 </ul>
               </li>
@@ -241,26 +241,26 @@
             <p><strong>Email:</strong> <span>admin@bicod.org</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="https://x.com/Bicod_Sarl"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.facebook.com/share/15jJWtQ6X7/"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/bicod_sarl/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/bureau-international-de-cooperation-au-developpement/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Liens utiles</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="index.html">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#about">About us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#about">A propos</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#services">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contact us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contactez nous</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#team">Personnel</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Nos Services</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="santé.html">Ingénierie de la Santé</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="developpement_durable.html">Developpement durable</a></li>
@@ -296,7 +296,6 @@
     </div>
 
   </footer>
-
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
